<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bb285c">

    <TextView
        android:id="@+id/tv_hint_emergencia_duracao"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tv_header_setpop"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_tempo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_tempo"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="20dp"
        android:max="119"
        android:progress="1"
        android:progressBackgroundTint="#FFFEFE"
        android:progressTint="#5C0724"
        android:scrollbarStyle="insideOverlay"
        android:thumb="@android:drawable/ic_menu_recent_history"
        app:layout_constraintBottom_toTopOf="@+id/tv_tmp_escolhido"
        app:layout_constraintEnd_toStartOf="@+id/tv_max_temp"
        app:layout_constraintStart_toEndOf="@+id/tv_min_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_emergencia_duracao" />

    <TextView
        android:id="@+id/tv_max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/tv_max_dur"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_tempo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar_tempo"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_emergencia_duracao"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/tv_min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/tv_min_dur"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_tempo"
        app:layout_constraintEnd_toStartOf="@+id/seekBar_tempo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_emergencia_duracao"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/tv_tmp_escolhido"
        android:layout_width="84dp"
        android:layout_height="141dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/duracao_escolhida"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bt_confirmar_emergencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_tempo" />

    <Button
        android:id="@+id/bt_confirmar_emergencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="#5C0724"
        android:text="@string/confirmar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tmp_escolhido" />

</android.support.constraint.ConstraintLayout>